# Desafio_Python_1

./: README.md  desafio1.py  erros.py  kpis.py  main.py  pipeline.py  pyproject.toml  relatorio_individual.py
